--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -1,3 +1,9 @@
 {
-  "submit": "Submit"
+  "submit": "Submit",
+  "state": {
+    "error": {
+      "title": "An error occurred, please try again later."
+    }
+  },
+  "showMore": "Show more"
 }
