refactor card transaction to add badgeProps

--- a/design-system/molecules/cards/card-transaction/translations/card-transaction.en.json
+++ b/design-system/molecules/cards/card-transaction/translations/card-transaction.en.json
@@ -1,5 +1,7 @@
 {
   "types": {
+    "DEPOSITED": "Deposited",
+    "ALLOCATED": "Allocated",
     "GRANTED": "Granted",
     "RECEIVED": "Received",
     "RETURNED": "Returned"
