--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -12,5 +12,10 @@
     "LAST_SEMESTER": "Last semester",
     "LAST_YEAR": "Last year",
     "ALL_TIME": "All time"
-  }
+  },
+  "languages": "Languages +{{count}}",
+  "sponsors": "Sponsors +{{count}}",
+  "projects": "Projects +{{count}}",
+  "users": "Users +{{count}}",
+  "categories": "Categories +{{count}}"
 }
