feat(notification): list

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -3,6 +3,9 @@
   "state": {
     "error": {
       "title": "An error occurred, please try again later."
+    },
+    "empty": {
+      "title": "No items found."
     }
   },
   "showMore": "Show more",
