--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -13,6 +13,13 @@
     "LAST_YEAR": "Last year",
     "ALL_TIME": "All time"
   },
+  "timeGroupingType": {
+    "DAY": "Day",
+    "WEEK": "Week",
+    "MONTH": "Month",
+    "QUARTER": "Quarter",
+    "YEAR": "Year"
+  },
   "languages": "Languages +{{count}}",
   "sponsors": "Sponsors +{{count}}",
   "projects": "Projects +{{count}}",
