fix(ds): card transactions types

--- a/design-system/molecules/cards/card-transaction/translations/card-transaction.en.json
+++ b/design-system/molecules/cards/card-transaction/translations/card-transaction.en.json
@@ -1,9 +1,8 @@
 {
   "types": {
-    "DEPOSITED": "Deposited",
     "ALLOCATED": "Allocated",
     "GRANTED": "Granted",
-    "RECEIVED": "Received",
-    "RETURNED": "Returned"
+    "UNALLOCATED": "Unallocated",
+    "UNGRANTED": "Ungranted"
   }
 }
