--- a/design-system/molecules/cards/card-transaction/translations/card-transaction.en.json
+++ b/design-system/molecules/cards/card-transaction/translations/card-transaction.en.json
@@ -1,5 +1,6 @@
 {
   "types": {
+    "DEPOSITED": "Deposited",
     "ALLOCATED": "Allocated",
     "GRANTED": "Granted",
     "UNALLOCATED": "Unallocated",
