--- a/design-system/molecules/cards/card-transaction/translations/card-transaction.en.json
+++ b/design-system/molecules/cards/card-transaction/translations/card-transaction.en.json
@@ -3,7 +3,7 @@
     "DEPOSITED": "Deposited",
     "ALLOCATED": "Allocated",
     "GRANTED": "Granted",
-    "RECEIVED": "Received",
-    "RETURNED": "Returned"
+    "UNALLOCATED": "Unallocated",
+    "UNGRANTED": "Ungranted"
   }
 }
