--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -28,6 +28,11 @@
     "GREATER_THAN_OR_EQUAL": "is superior or equal",
     "LESS_THAN_OR_EQUAL": "is inferior or equal"
   },
+  "contributionFilterType": {
+    "PULL_REQUESTS": "Pull requests",
+    "ISSUES": "Issues",
+    "CODE_REVIEWS": "Code reviews"
+  },
   "userType": {
     "CONTRIBUTOR": "Contributor",
     "MAINTAINER": "Maintainer",
