wip(deep): project columns list (#238)

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -49,5 +49,6 @@
   "sponsors": "Sponsors +{{count}}",
   "projects": "Projects +{{count}}",
   "users": "Users +{{count}}",
-  "categories": "Categories +{{count}}"
+  "categories": "Categories +{{count}}",
+  "search": "Search"
 }
