--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -14,14 +14,16 @@
     "LAST_MONTH": "Last month",
     "LAST_SEMESTER": "Last semester",
     "LAST_YEAR": "Last year",
-    "ALL_TIME": "All time"
+    "ALL_TIME": "All time",
+    "CUSTOM": "Custom period"
   },
   "dateRangeTypeLong": {
     "LAST_WEEK": "Last week ({{from}} to {{to}})",
     "LAST_MONTH": "Last month ({{from}} to {{to}})",
     "LAST_SEMESTER": "Last semester ({{from}} to {{to}})",
     "LAST_YEAR": "Last year ({{from}} to {{to}})",
-    "ALL_TIME": "All time"
+    "ALL_TIME": "All time",
+    "CUSTOM": "Custom period"
   },
   "quantityFilterType": {
     "EQUAL": "is equal",
