refactor transaction panel

--- a/design-system/molecules/cards/card-transaction/translations/card-transaction.en.json
+++ b/design-system/molecules/cards/card-transaction/translations/card-transaction.en.json
@@ -4,6 +4,7 @@
     "ALLOCATED": "Allocated",
     "GRANTED": "Granted",
     "UNALLOCATED": "Unallocated",
-    "UNGRANTED": "Ungranted"
+    "UNGRANTED": "Ungranted",
+    "REWARDED": "Rewarded"
   }
 }
