add rewarded filter

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -40,6 +40,10 @@
     "MAINTAINER": "Maintainer",
     "LEAD_PROGRAM": "Lead Program"
   },
+  "rewardedType": {
+    "REWARDED": "Rewarded",
+    "UNREWARDED": "Unrewarded"
+  },
   "timeGroupingType": {
     "DAY": "Day",
     "WEEK": "Week",
