--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -40,6 +40,11 @@
     "MAINTAINER": "Maintainer",
     "LEAD_PROGRAM": "Lead Program"
   },
+  "contributionType": {
+    "PULL_REQUEST": "Pull request",
+    "CODE_REVIEW": "Code review",
+    "ISSUE": "Issue"
+  },
   "rewardedType": {
     "REWARDED": "Rewarded",
     "UNREWARDED": "Unrewarded"
