--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -61,5 +61,10 @@
   "projects": "Projects +{{count}}",
   "users": "Users +{{count}}",
   "categories": "Categories +{{count}}",
-  "search": "Search"
+  "search": "Search",
+  "contributions": "Contributions",
+  "select": "Select",
+  "selectAll": "Select all",
+  "next": "Next",
+  "back": "Back"
 }
