feat(panel): user contributions selection

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -64,6 +64,7 @@
   "search": "Search",
   "contributions": "Contributions",
   "select": "Select",
+  "unselect": "Unselect",
   "selectAll": "Select all",
   "next": "Next",
   "back": "Back"
