wip(panel): single contribution validation

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -67,5 +67,6 @@
   "unselect": "Unselect",
   "selectAll": "Select all",
   "next": "Next",
-  "back": "Back"
+  "back": "Back",
+  "reward": "Reward"
 }
