fix review coms

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -63,6 +63,8 @@
   "categories": "Categories +{{count}}",
   "search": "Search",
   "contributions": "Contributions",
+  "contributionsCount_one": "{{count}} contribution",
+  "contributionsCount_other": "{{count}} contributions",
   "select": "Select",
   "unselect": "Unselect",
   "selectAll": "Select all",
