fix(contributions): select all

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -68,6 +68,7 @@
   "select": "Select",
   "unselect": "Unselect",
   "selectAll": "Select all",
+  "clearSelection": "Clear selection",
   "next": "Next",
   "back": "Back",
   "reward": "Reward"
