--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -46,6 +46,7 @@
     "ISSUE": "Issue"
   },
   "rewardedType": {
+    "ALL": "All",
     "REWARDED": "Rewarded",
     "UNREWARDED": "Unrewarded"
   },
