add contributors activity filter

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -45,6 +45,13 @@
     "CODE_REVIEW": "Code review",
     "ISSUE": "Issue"
   },
+  "contributorActivityStatus": {
+    "ACTIVE": "Active",
+    "INACTIVE": "Inactive",
+    "NEW": "New",
+    "REACTIVATED": "Reactivated",
+    "CHURNED": "Churned"
+  },
   "rewardedType": {
     "REWARDED": "Rewarded",
     "UNREWARDED": "Unrewarded"
