feat(reward-button): add tooltip

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -78,5 +78,8 @@
   "clearSelection": "Clear selection",
   "next": "Next",
   "back": "Back",
-  "reward": "Reward"
+  "reward": "Reward",
+  "tooltip": {
+    "disabledReward": "No budget available"
+  }
 }
