feat: dashboard contributions filters

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -81,5 +81,9 @@
   "reward": "Reward",
   "tooltip": {
     "disabledReward": "No budget available"
+  },
+  "form": {
+    "reset": "Reset",
+    "save": "Save"
   }
 }
