add billing cards

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -85,5 +85,10 @@
   "form": {
     "reset": "Reset",
     "save": "Save"
+  },
+  "billingProfileType": {
+    "INDIVIDUAL": "Individual",
+    "COMPANY": "Company",
+    "SELF_EMPLOYED": "Self employed"
   }
 }
