handle employe type

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -89,6 +89,7 @@
   "billingProfileType": {
     "INDIVIDUAL": "Individual",
     "COMPANY": "Company",
-    "SELF_EMPLOYED": "Self employed"
+    "SELF_EMPLOYED": "Self employed",
+    "EMPLOYEE": "Employee"
   }
 }
