fix review coms

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -86,8 +86,7 @@
     "reset": "Reset",
     "save": "Save"
   },
-  "description": "Description"
-  },
+  "description": "Description",
   "billingProfileType": {
     "INDIVIDUAL": "Individual",
     "COMPANY": "Company",
