Add billing profile selection sidepanel (#632)

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -86,5 +86,11 @@
     "reset": "Reset",
     "save": "Save"
   },
-  "description": "Description"
+  "description": "Description",
+  "billingProfileType": {
+    "INDIVIDUAL": "Individual",
+    "COMPANY": "Company",
+    "SELF_EMPLOYED": "Self employed",
+    "EMPLOYEE": "Employee"
+  }
 }
