--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -84,7 +84,8 @@
   },
   "form": {
     "reset": "Reset",
-    "save": "Save"
+    "save": "Save",
+    "send": "Send"
   },
   "description": "Description",
   "billingProfileType": {
