feat: repos popover

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -72,6 +72,9 @@
   "contributions": "Contributions",
   "contributionsCount_one": "{{count}} contribution",
   "contributionsCount_other": "{{count}} contributions",
+  "repos": "Repositories",
+  "reposCount_one": "{{count}} repository",
+  "reposCount_other": "{{count}} repositories",
   "select": "Select",
   "unselect": "Unselect",
   "selectAll": "Select all",
