--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -105,5 +105,9 @@
     "pullRequest_other": "Pull requests",
     "codeReview_one": "Code review",
     "codeReview_other": "Code reviews"
+  },
+  "count": {
+    "issues": "{{count}} issues",
+    "goodFirstIssues": "{{count}} Good First Issues"
   }
 }
