Refactor BrowseProjects component to enhance filtering and tab management
- Updated the `BrowseProjects` component to utilize a new tab structure based on project tags, improving user experience with dynamic translations.
- Introduced `PROJECT_TAG` constants and metadata for better organization and maintainability of project tags.
- Enhanced filtering logic in `BrowseProjectsContextProvider` to manage tags more effectively.
- Added new translations for project tags and updated existing translation files for consistency.
- Improved the overall structure and readability of the codebase related to project browsing.

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -110,5 +110,6 @@
     "issues": "{{count}} issues",
     "goodFirstIssues": "{{count}} Good First Issues",
     "prCount": "{{count}} PRs"
-  }
+  },
+  "all": "All"
 }
