Refactor Project Recommendation Page and Matching Questions Feature  - Updated ProjectRecommendationPage to use new header tokens for better clarity. - Modified useMatchingQuestions hook to replace algorithm ID and enhance toast notifications with translation support. - Refactored NavigationButtons component to streamline button rendering and added translation tokens for button labels. - Expanded translation files to include success and error messages for answer saving. - Adjusted translation structure to categorize project recommendation details.  These changes improve user experience and maintainability of the project recommendation feature.

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -80,6 +80,7 @@
   "selectAll": "Select all",
   "clearSelection": "Clear selection",
   "next": "Next",
+  "finish": "Finish",
   "back": "Back",
   "reward": "Reward",
   "tooltip": {
