--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -109,7 +109,8 @@
   },
   "count": {
     "issues": "{{count}} issues",
-    "goodFirstIssues": "{{count}} Good First Issues",
+    "openIssues": "{{count}} Open issues",
+    "goodFirstIssues": "{{count}} Good first issues",
     "prCount": "{{count}} PRs"
   },
   "all": "All"
