Refactor CardProjectMarketplace: Update issue counts to be optional, add 'odhackIssueCount', and improve button rendering. Adjust styles for better layout consistency.

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -109,8 +109,9 @@
   },
   "count": {
     "issues": "{{count}} issues",
-    "openIssues": "{{count}} Open issues",
-    "goodFirstIssues": "{{count}} Good first issues",
+    "openIssues": "Open issues",
+    "goodFirstIssues": "Good first issues",
+    "odhack": "ODHack availabe issues",
     "prCount": "{{count}} PRs"
   },
   "all": "All"
