Update English translations to include issue availability status - Added new translation keys for "Available" and "Unavailable" in common.en.json to enhance user interface clarity regarding issue availability.

--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -114,5 +114,9 @@
     "odhack": "ODHack available issues",
     "prCount": "{{count}} PRs"
   },
-  "all": "All"
+  "all": "All",
+  "issueAvailable": {
+    "AVAILABLE": "Available",
+    "UNAVAILABLE": "Unavailable"
+  }
 }
