--- a/shared/translation/translations/common/common.en.json
+++ b/shared/translation/translations/common/common.en.json
@@ -111,7 +111,7 @@
     "issues": "{{count}} issues",
     "openIssues": "Open issues",
     "goodFirstIssues": "Good first issues",
-    "odhack": "ODHack available issues",
+    "odhack": "ODBoost available issues",
     "prCount": "{{count}} PRs"
   },
   "all": "All",
